Eclipse code clean up and address java issues